Added complete instructions to setup dhis2